force-app/main/default/objects/Meteograma__c/Meteograma__c.object-meta.xml
<CustomObject>
    <label>Meteograma</label>
    <nameField>
        <displayFormat>MET-{0000}</displayFormat>
        <label>Nome de Metereograma</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meteogramas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>