force-app/main/default/objects/Meteograma__c/fields/API__c.field-meta.xml
<CustomField>
    <fullName>API__c</fullName>
    <label>API</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AISWEB</fullName>
            </value>
            <value>
                <fullName>REDEMET</fullName>
            </value>
            <value>
                <fullName>Aviation Weather</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>