force-app/main/default/objects/Meteograma__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <formula>AND( DATEVALUE(CreatedDate ) ==  TODAY(),
HOUR(TIMEVALUE(CreatedDate)) ==  HOUR(TIMENOW()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>