force-app/main/default/objects/Meteograma__c/fields/DirecaoVento__c.field-meta.xml
<CustomField>
    <fullName>DirecaoVento__c</fullName>
    <label>Direção do vento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>