force-app/main/default/objects/Meteograma__c/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local (Waypoint)</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Meteogramas</relationshipLabel>
    <relationshipName>Meteogramas</relationshipName>
    <type>Lookup</type>
</CustomField>