force-app/main/default/objects/Meteograma__c/fields/Metar__c.field-meta.xml
<CustomField>
    <fullName>Metar__c</fullName>
    <label>Metar</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>