force-app/main/default/objects/Meteograma__c/fields/nascerSol__c.field-meta.xml
<CustomField>
    <fullName>nascerSol__c</fullName>
    <label>nascerSol</label>
    <type>DateTime</type>
</CustomField>