force-app/main/default/objects/Meteograma__c/fields/porSol__c.field-meta.xml
<CustomField>
    <fullName>porSol__c</fullName>
    <label>porSol</label>
    <type>DateTime</type>
</CustomField>