force-app/main/default/objects/Meteograma__c/fields/Pressao__c.field-meta.xml
<CustomField>
    <fullName>Pressao__c</fullName>
    <label>Pressao</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>