force-app/main/default/objects/Meteograma__c/fields/Taf__c.field-meta.xml
<CustomField>
    <fullName>Taf__c</fullName>
    <label>Taf</label>
    <type>TextArea</type>
</CustomField>