force-app/main/default/objects/Meteograma__c/fields/Temperatura__c.field-meta.xml
<CustomField>
    <fullName>Temperatura__c</fullName>
    <label>Temperatura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>