force-app/main/default/objects/Meteograma__c/fields/VelocidadeVento__c.field-meta.xml
<CustomField>
    <fullName>VelocidadeVento__c</fullName>
    <label>Velocidade vento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>